--- a/src/main/webapp/views/main/menu.xhtml
+++ b/src/main/webapp/views/main/menu.xhtml
@@ -23,8 +23,15 @@
 		<li>
 		  <h:commandLink action="sell">
 			 <h:outputText value=" Sell car" />
-		  </h:commandLink>
-		</li>
+		  </h:commandLink></li>
+		  <li>
+		  <h:commandLink action="showCars?faces-redirect=true">
+			 <h:outputText value="Wszystkie samochody" />
+		  </h:commandLink></li>
+	 <li>
+	 <h:commandLink action="showSlownik">
+	 <h:outputText value="Wszystkie slowniki" />
+	 </h:commandLink> </li>
 	</ul>
    </h:form>
   </div>
