--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -1,7 +1,7 @@
 body {
    margin: 0;
    padding: 0;
-   background-color:  lightGray;
+   background-color:  purple;
    font-family: Verdana, sans-serif;
    font-size: 0.9em;
 }
