--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -1,20 +1,23 @@
 body {
-   margin: 0;
-   padding: 0;
-   background-color:  purple;
+   background-color: purple;
    font-family: Verdana, sans-serif;
    font-size: 0.9em;
+	margin-bottom: 10px;
+	margin-right: 10px;
+	margin-left: 10px;
+	margin-top: 10px;
 }
 
 .heading {
-  padding: 10px;
+
   background: #FFFFFF;
   border: 1px solid blue;
   font-size: 1.4em;
   font-style: italic;
   font-family: Verdana;
   text-align: center;
-  height: 50px;
+  height: 60px;
+	width: 100pc
 }
 
 .menuAndContent {
@@ -33,6 +36,9 @@ body {
   width: 200px;
   background: #FFFFFF;
   top: 90px;
+	border-style: solid;
+	padding: px;
+	margin: px
 }
 
 .content {
@@ -41,9 +47,11 @@ body {
   padding-bottom: 20px;
   border: thin solid blue;
   background: #FFFFFF;	
-  position:absolute;
+  position: absolute;
   left: 225px; 
   right: 65px;
   top: 90px;
   height: 80%;
+	margin: px;
+	margin-left: 100px
 }
